working on windows

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"gulp": "npx gulp",
 		"build": "npm run build-prisma && npm run gulp && npm run build-css",
 		"start": "node ./dist/index.js",
-		"dev": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm src/index.ts'",
+		"dev": "nodemon",
 		"build-prisma": "npx prisma generate",
 		"mongodb-start": "mongod --port 27017 --dbpath ~/data/db --replSet rs0"
 	},
